# template-docker-python

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: .flake8  mypy.ini  pyproject.toml
doc/: 01-instalação-docker.md  02-preparando-docker-para-python.md  03-exemplos-de-requirements.txt.md  04-usando-o-vscode.md  05-comandos-docker-e-docker-compose.md  padrao-commit-semantico.md
environment/: requirements.txt
