[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

exclude = '''
(
    /(
        \.git
        | \.mypy_cache
        | \.pytest_cache
        | \.tox
        | \.nox
        | env
        | venv
        | \.venv
        | \.vscode
        | \.idea
        | __pycache__
    )/
)
'''


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip = [".gitignore", ".dockerignore", "env", "venv", ".venv"]

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
exclude = [
    '^env/',
    '^venv/',
    '^\.venv/',
    '^\.mypy_cache/',
    '^\.pytest_cache/',
    '^\.tox/',
    '^\.nox/',
    '^\.vscode/',
    '^\.idea/'
]

[tool.pytest.ini_options]
addopts = "--cov=myapp --cov-report=html --junitxml=test-results.xml"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"